--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
+APP = local
 PORT = 3001
 
+DB_DIALECT = postgres
 DB_HOST = localhost
 DB_PORT = 5432
-DB_NAME = blogdb
+DB_NAME = blogsqdbdev
 DB_USER = postgres
 DB_PASSWORD = root
+
+JWT_ENCRYPTION = wfeghrtyuilgfe
+JWT_EXPIRATION = 1800000
+REFRESH_TOKEN_EXPIRATION = 1800000
+SECRET_KEY = "secret key"
