--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST = localhost
 DB_PORT = 5432
 DB_NAME = blogsqdbdev
 DB_USER = postgres
-DB_PASSWORD = root
+DB_PASSWORD = postgres
 
 JWT_ENCRYPTION = wfeghrtyuilgfe
 JWT_EXPIRATION = 1800000
